--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ test_ci ]
-  
+    branches: [test_ci]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -24,17 +23,23 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: List all ORIGINAL files
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          ls
 
-      - name: Run another script
+      - name: Install Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+
+      - name: Run Python script
         run: |
-          echo this is a new command!
+          python create_file.py
 
+      - name: List all NEW files 
+        run: |
+          ls
+
+# Install Python
+# Create a new file
+# list the files again (prove that python worked)
