--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,38 +8,21 @@ on:
   push:
     branches: [test_ci]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  display:
     runs-on: ubuntu-latest
+    env:
+      platform: Azure
+      region: central
+      profile_path: profile/
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      - name: List all ORIGINAL files
+      - name: Display custom environment variables
+        if: ${{ env.platform == 'Azure' }}
         run: |
-          ls
-
-      - name: Install Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-
-      - name: Run Python script
-        run: |
-          python create_file.py
-
-      - name: List all NEW files 
-        run: |
-          ls
-
-# Install Python
-# Create a new file
-# list the files again (prove that python worked)
+          echo "Platform is ${{ env.platform }}"
+          echo "The region is ${{ env.region }}"
+        
