--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           python-version: '3.8'  # Set the Python version you want to use
 
       - name: Run Python Script
-        run: python create_file.py
+        run: python create_file_2.py
 
       - name: List all NEW files
         run: ls
@@ -39,6 +39,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     # This job will run after the build job is completed
+    if: always()
+    # This job will run even if the build job fails
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
